# models/users.model.js
@@ -4,7 +4,6 @@ export const USER_CODES = {
     USER_INSERT_FAILED: 'USER_INSERT_FAILED',
     USER_TABLE_EMPTY: 'USER_TABLE_EMPTY',
     USER_NOT_FOUND: 'USER_NOT_FOUND',
-    USER_UPDATE_FAILED: 'USER_UPDATE_FAILED',
 }
 
 export const getAllUsersModel = async () => {
@@ -17,7 +16,7 @@ export const getAllUsersModel = async () => {
     }
 }
 export const getUserByUsernameModel = async (user) => {
-    const result = await executeSql("SELECT id, username, name  FROM users WHERE username = ?", [user.username]);
+    const result = await executeSql("SELECT id, username, name , password  FROM users WHERE username = ?", [user.username]);
     console.log(result);
     if (result) {
         return { result };
